edw-tui/tests/snapshots/e2e_transfer__transfer_final.snap
---
source: tests/e2e_transfer.rs
expression: text
---
┌ Chat ────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐┌ edw commands ────────────────────────────────────────────────────────────────────────────────────────────┐
│you: unlock local                                                                                                                 ││✓ $ edw unlock --network local                                                                            │
│                                                                                                                                  ││  Unlocked local. Run `edw lock` to lock the wallet.                                                      │
│edw: Done. The command and its output are in the log.                                                                             ││                                                                                                          │
│                                                                                                                                  ││✓ $ edw profile add --next --name alice                                                                   │
│you: add a profile named alice                                                                                                    ││  Created profile 0/1 (alice).                                                                            │
│                                                                                                                                  ││                                                                                                          │
│edw: Done. The command and its output are in the log.                                                                             ││✓ $ edw profile add --next --name bob                                                                     │
│                                                                                                                                  ││  Created profile 0/2 (bob).                                                                              │
│you: add a profile named bob                                                                                                      ││                                                                                                          │
│                                                                                                                                  ││✓ $ interim transfer --to 0x98e503f35D0a019cB0a251aD243a4cCFCF371F46 --amount 0.1 --token ETH --from alice│
│edw: Done. The command and its output are in the log.                                                                             ││(dry run)                                                                                                 │
│                                                                                                                                  ││  From     alice (0/1) 0x8C8d35429F74ec245F8Ef2f4Fd1e551cFF97d650 on local (chain 31337)                  │
│you: /profile alice                                                                                                               ││  Send     0.1 ETH  (100000000000000000 base units)                                                       │
│                                                                                                                                  ││  To       0x98e503f35D0a019cB0a251aD243a4cCFCF371F46                                                     │
│info: Transfers are now sent from profile alice (0x8C8d35429F74ec245F8Ef2f4Fd1e551cFF97d650). /copy address copies it.            ││  Max fee  0.000042000000021 ETH  (21000 gas × 2.000000001 gwei)                                          │
│                                                                                                                                  ││  Signed by edw-tui's interim executor (edw-core), not edw's CLI                                          │
│you: send 0.1 ETH to 0x98e503f35D0a019cB0a251aD243a4cCFCF371F46                                                                   ││                                                                                                          │
│                                                                                                                                  ││✓ $ interim transfer --to 0x98e503f35D0a019cB0a251aD243a4cCFCF371F46 --amount 0.1 --token ETH --from alice│
│edw: Done. The command and its output are in the log.                                                                             ││  Sent. Transaction 0x8eb6df9d72c35e73dcdb5bf7954701ae31e97eb3f771fdbced9b2135a77a3b89 was included in    │
│                                                                                                                                  ││block 1 and succeeded (gas used 21000).                                                                   │
│                                                                                                                                  ││                                                                                                          │
│                                                                                                                                  ││                                                                                                          │
│                                                                                                                                  ││                                                                                                          │
│                                                                                                                                  ││                                                                                                          │
│                                                                                                                                  ││                                                                                                          │
│                                                                                                                                  ││                                                                                                          │
│                                                                                                                                  ││                                                                                                          │
│                                                                                                                                  ││                                                                                                          │
│                                                                                                                                  ││                                                                                                          │
│                                                                                                                                  ││                                                                                                          │
│                                                                                                                                  ││                                                                                                          │
│                                                                                                                                  ││                                                                                                          │
│                                                                                                                                  ││                                                                                                          │
│                                                                                                                                  ││                                                                                                          │
│                                                                                                                                  ││                                                                                                          │
│                                                                                                                                  ││                                                                                                          │
│                                                                                                                                  ││                                                                                                          │
│                                                                                                                                  ││                                                                                                          │
│                                                                                                                                  ││                                                                                                          │
│                                                                                                                                  ││                                                                                                          │
│                                                                                                                                  ││                                                                                                          │
│                                                                                                                                  ││                                                                                                          │
│                                                                                                                                  ││                                                                                                          │
│                                                                                                                                  ││                                                                                                          │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘└──────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌ Message ─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│>                                                                                                                                                                                                                                             │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
 model scripted · from alice · data [TMP DIR] · Enter send · Tab one panel · /copy · /help · Ctrl-C quit
